[0, 15, 22]: 2017-07-28
  - fix for round_tripping singe excl. mark tags doubling (reported and fix by Jan Brezina)

[0, 15, 21]: 2017-07-25
  - fix for writing unicode in new API, https://stackoverflow.com/a/45281922/1307905

[0, 15, 20]: 2017-07-23
  - wheels for windows including C extensions

[0, 15, 19]: 2017-07-13
  - added object constructor for rt, decorator ``yaml_object`` to replace YAMLObject.
  - fix for problem using load_all with Path() instance
  - fix for load_all in combination with zero indent block style literal
    (``pure=True`` only!)

[0, 15, 18]: 2017-07-04
  - missing ``pure`` attribute on ``YAML`` useful for implementing `!include` tag
    constructor for `including YAML files in a YAML file
    <https://stackoverflow.com/a/44913652/1307905>`_
  - some documentation improvements
  - trigger of doc build on new revision

[0, 15, 17]: 2017-07-03
  - support for Unicode supplementary Plane **output** with allow_unicode
    (input was already supported, triggered by
    `this <https://stackoverflow.com/a/44875714/1307905>`_ Stack Overflow Q&A)

[0, 15, 16]: 2017-07-01
  - minor typing issues (reported and fix provided by
    `Manvendra Singh <https://bitbucket.org/manu-chroma/>`_)
  - small doc improvements

[0, 15, 15]: 2017-06-27
  - fix for issue 135, typ='safe' not dumping in Python 2.7
    (reported by Andrzej Ostrowski <https://bitbucket.org/aostr123/>`_)

[0, 15, 14]: 2017-06-25
  - setup.py: change ModuleNotFoundError to ImportError (reported and fix by Asley Drake)

[0, 15, 13]: 2017-06-24
  - suppress duplicate key warning on mappings with merge keys (reported by
    Cameron Sweeney)

[0, 15, 12]: 2017-06-24
  - remove fatal dependency of setup.py on wheel package (reported by
    Cameron Sweeney)

[0, 15, 11]: 2017-06-24
  - fix for issue 130, regression in nested merge keys (reported by
    `David Fee <https://bitbucket.org/dfee/>`_)

[0, 15, 10]: 2017-06-24
  - fix for issue 130, regression in nested merge keys (reported by